--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<script src="assets/dist/js/modernizr.js"></script>
 </head>
 
-<body id="myapp" data-controller="module" data-action="action1 action2">
+<body id="myapp" data-controller="module" data-action="">
 
 	<div class="container">
 		<header class="banner" role="banner">
@@ -29,21 +29,59 @@
 
 		<main role="main">
 
-			<h1>Starter</h1>
-			<div class="col col1">
-				<h2>Desktop first approach</h2>
-				<p>Current breakpoint <b id="breakpoint"></b></p>
-			</div>
-			<div class="col col2">
-				<h2>Mobile first approach</h2>
-				<p>Current breakpoint <b id="breakpoint-mobile-first"></b></p>
-			</div>
+			<div class="accordion--mobile">
+				<h3>Section Header</h3>
 
+				<div class="accordion--desktop">
+					<h3>Section 1</h3>
+					<div>
+						<p>
+						Mauris mauris ante, blandit et, ultrices a, suscipit eget, quam. Integer
+						ut neque. Vivamus nisi metus, molestie vel, gravida in, condimentum sit
+						amet, nunc. Nam a nibh. Donec suscipit eros. Nam mi. Proin viverra leo ut
+						odio. Curabitur malesuada. Vestibulum a velit eu ante scelerisque vulputate.
+						</p>
+					</div>
+					<h3>Section 2</h3>
+					<div>
+						<p>
+						Sed non urna. Donec et ante. Phasellus eu ligula. Vestibulum sit amet
+						purus. Vivamus hendrerit, dolor at aliquet laoreet, mauris turpis porttitor
+						velit, faucibus interdum tellus libero ac justo. Vivamus non quam. In
+						suscipit faucibus urna.
+						</p>
+					</div>
+					<h3>Section 3</h3>
+					<div>
+						<p>
+						Nam enim risus, molestie et, porta ac, aliquam ac, risus. Quisque lobortis.
+						Phasellus pellentesque purus in massa. Aenean in pede. Phasellus ac libero
+						ac tellus pellentesque semper. Sed ac felis. Sed commodo, magna quis
+						lacinia ornare, quam ante aliquam nisi, eu iaculis leo purus venenatis dui.
+						</p>
+						<ul>
+							<li>List item one</li>
+							<li>List item two</li>
+							<li>List item three</li>
+						</ul>
+					</div>
+					<h3>Section 4</h3>
+					<div>
+						<p>
+						Cras dictum. Pellentesque habitant morbi tristique senectus et netus
+						et malesuada fames ac turpis egestas. Vestibulum ante ipsum primis in
+						faucibus orci luctus et ultrices posuere cubilia Curae; Aenean lacinia
+						mauris vel est.
+						</p>
+						<p>
+						Suspendisse eu nisl. Nullam ut libero. Integer dignissim consequat lectus.
+						Class aptent taciti sociosqu ad litora torquent per conubia nostra, per
+						inceptos himenaeos.
+						</p>
+					</div>
+				</div>
+			</div>
 		</main> <!-- END main -->
-
-		<aside class="sidebar" role="complementary">
-			A potential sidebar
-		</aside> <!-- END .sidebar -->
 
 		<footer class="footer" role="contentinfo">
 			&copy; 2014
